@@ -37,6 +37,8 @@ geist_object_init(geist_object * obj)
    obj->check_resize_click = geist_object_int_check_resize_click;
    obj->get_resize_box_coords = geist_object_int_get_resize_box_coords;
    obj->click_is_selection = geist_object_int_click_is_selection;
+	obj->update_position_relative = geist_object_int_update_position_relative;
+	obj->update_dimensions_relative = geist_object_int_update_dimensions_relative;
    obj->get_updates = geist_object_int_get_updates;
    obj->name = estrdup("Untitled Object");
 
@@ -971,4 +973,43 @@ geist_object_int_click_is_selection(geist_object * obj, int x, int y)
    }
 
    D_RETURN(3, 0);
+}
+
+void
+geist_object_update_dimensions_relative (geist_object *obj, int w_offset, int
+		h_offset)
+{
+	D_ENTER(3);
+	obj->update_dimensions_relative(obj, w_offset, h_offset);
+	D_RETURN_(3);
+}
+		
+void geist_object_int_update_dimensions_relative(geist_object *obj, 
+																int w_offset, int h_offset)
+{
+	D_ENTER(3);
+	obj->resize = RESIZE_BOTTOMRIGHT;
+	w_offset += obj->x + obj->w;
+	h_offset += obj->y + obj->h;
+	geist_object_resize_object(obj, w_offset, h_offset);
+	D_RETURN_(3);
+}
+
+void
+geist_object_update_position_relative (geist_object *obj, int x_offset,
+		 											int y_offset)
+{
+	D_ENTER(3);
+	obj->update_position_relative(obj, x_offset, y_offset);
+	D_RETURN_(3);
+}
+
+void
+geist_object_int_update_position_relative(geist_object *obj, int x_offset,
+														int y_offset)
+{
+	D_ENTER(3);
+	obj->x = obj->x + x_offset;
+	obj->y = obj->y + y_offset;
+	D_RETURN_(3);
 }
