@@ -1,3 +1,8 @@
+Wed Aug 23 14:12:05 2000  Till Adam    <Till_Adam@bigfoot.com>
+
+        ^* added _update_position_relative and _update_dimensions_relative as
+	object member functions and updated the callbacks to use them. 
+
 Tue Aug 22 21:38:51 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Object dirtying now uses an update rect generated by a
